docs: improve Swaggo model and descriptions documentations
