# api/orders/requests/order_create.go
@@ -5,10 +5,11 @@ import (
 	. "rocky.my.id/git/h8-assignment-2/models"
 )
 
-// OrderCreate represents a request payload for order creation.
+// OrderCreate
+// @Description Represents a request payload for order creation.
 type OrderCreate struct {
-	CustomerName string         `form:"customerName" json:"customerName" binding:"required"`
-	Items        []ItemOnCreate `form:"items" json:"items" binding:"required,dive"`
+	CustomerName string         `form:"customerName" json:"customerName" binding:"required" example:"Marvin"` // This is the customer name
+	Items        []ItemOnCreate `form:"items" json:"items" binding:"required,dive"`                           // This is the order items
 }
 
 // BindToModel binds the request to the actual data model.
