# docs/swagger.yaml
@@ -1,35 +1,53 @@
 definitions:
   models.Item:
+    description: Represents an item tied to an order.
     properties:
       description:
+        example: A description
         type: string
       itemCode:
+        example: STUFF-1
         type: string
       lineItemId:
+        example: 1
         type: integer
       quantity:
+        example: 1337
         type: integer
     type: object
   models.Order:
+    description: Represent an order of a customer with the order date and one or more
+      item(s).
     properties:
       customerName:
+        example: Marvin
         type: string
       items:
         items:
           $ref: '#/definitions/models.Item'
         type: array
       orderId:
+        example: 1
         type: integer
       orderedAt:
+        example: "2022-02-22T20:00:00.0000000+00:00"
         type: string
     type: object
   order_requests.ItemOnCreate:
+    description: Represents a request payload for an item tied to an order create
+      request.
     properties:
       description:
+        description: This is the item description
+        example: A description
         type: string
       itemCode:
+        description: This is the item code
+        example: STUFF-1
         type: string
       quantity:
+        description: This is the item quantity
+        example: 10
         type: integer
     required:
     - description
@@ -37,14 +55,24 @@ definitions:
     - quantity
     type: object
   order_requests.ItemOnUpdate:
+    description: Represents a request payload for an item tied to an order create
+      request.
     properties:
       description:
+        description: This is the item description
+        example: A (new) description
         type: string
       itemCode:
+        description: This is the item code
+        example: STUFF-1
         type: string
       lineItemId:
+        description: This is the item ID
+        example: 1
         type: integer
       quantity:
+        description: This is the item quantity
+        example: 1337
         type: integer
     required:
     - description
@@ -52,10 +80,14 @@ definitions:
     - quantity
     type: object
   order_requests.OrderCreate:
+    description: Represents a request payload for order creation.
     properties:
       customerName:
+        description: This is the customer name
+        example: Marvin
         type: string
       items:
+        description: This is the order items
         items:
           $ref: '#/definitions/order_requests.ItemOnCreate'
         type: array
@@ -64,40 +96,52 @@ definitions:
     - items
     type: object
   order_requests.OrderUpdate:
+    description: Represents a request payload for order update.
     properties:
       customerName:
+        description: This is the customer name
+        example: Marvin
         type: string
       items:
+        description: This is the order items
         items:
           $ref: '#/definitions/order_requests.ItemOnUpdate'
         type: array
     required:
-    - customerName
     - items
     type: object
   responses.Error:
+    description: Represents the default error response payload.
     properties:
       message:
+        example: something is wrong
         type: string
       status:
+        example: error
         type: string
     type: object
   responses.WithDataList-models_Order:
     properties:
       count:
+        example: 1
         type: integer
       data:
         items:
           $ref: '#/definitions/models.Order'
         type: array
       message:
+        example: success
         type: string
     type: object
   responses.WithRowsAffected:
+    description: Represents a response payload for any operations with affected row
+      count from the database.
     properties:
       count:
+        example: 13
         type: integer
       message:
+        example: success
         type: string
     type: object
   responses.WithSingleData-models_Order:
@@ -105,6 +149,7 @@ definitions:
       data:
         $ref: '#/definitions/models.Order'
       message:
+        example: success
         type: string
     type: object
 info:
